test neon's order

--- a/ushort2uchar/CMakeLists.txt
+++ b/ushort2uchar/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 2.8)
 include(hpcc-common)
-add_executable(test main.cpp)
+add_executable(test_ushrot2uchar main.cpp)
+add_executable(test_order  order_neon.cpp)
